--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-prismic-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A landing page based on Gatsby frontend and Prismic CMS backend",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Youngjae Lim <youngjaelim.webdev@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.2",
     "dotenv": "^8.6.0",
@@ -19,12 +19,20 @@
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-source-prismic": "^4.0.2",
     "gatsby-transformer-sharp": "^3.11.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "prismic-reactjs": "^1.3.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.0"
+    "react-markdown": "^7.0.0",
+    "react-syntax-highlighter": "^15.4.4",
+    "rehype-katex": "^6.0.0",
+    "remark-gfm": "^2.0.0",
+    "remark-math": "^5.0.0",
+    "remark-parse": "^6.0.3",
+    "styled-components": "^5.3.0",
+    "unified": "^8.4.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
